--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#acerca-de-mi">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#mis-trabajos">Trabajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -57,15 +57,15 @@
                     Dia a dia luchando por lograr convertirme en un profesional destacable. Camina hacia el Futuro conmigo y conoce los proyectos.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                   <a href="#mis-trabajos"> <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button></a>
+                  <a href="#contacto">  <button class="btn btn-lg btn-info text-light">Contacto</button></a>
                 </div>
             </div>
         </div>
     </header>
 
     <!-- Tercer Cambio -->
-    <section id="Acerca-de-mi" class="container text-center my-5">
+    <section id="acerca-de-mi" class="container text-center my-5">
 
 
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
@@ -101,7 +101,7 @@
     </section>
 
     <!-- Cuarto Cambio -->
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="mis-trabajos" class="my-5 p-5 bg-info">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
@@ -153,7 +153,7 @@
     </section>
 
     <!-- Quinto cambio -->
-    <section id="Contacto" class="container my-5">
+    <section id="contacto" class="container my-5">
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
